# eth_embedded_signer

./: README.md
eth_embedded_signer/: CMakeLists.txt  Makefile  build.bat
eth_embedded_signer/include/: crypto.h  rlp.h  transaction.h
eth_embedded_signer/src/: crypto.c  main.c  rlp.c  transaction.c
